Use correct gap on core/media-text block when stacked on mobile

--- a/assets/src/css/blocks/core/_media-text.scss
+++ b/assets/src/css/blocks/core/_media-text.scss
@@ -47,11 +47,6 @@
         padding: 2rem 0 0;
     }
 
-
-    .wp-block-media-text.is-stacked-on-mobile.has-media-on-the-right .wp-block-media-text__content {
-        padding: 0 0 2rem;
-    }
-
 }
 
 
